# CodeDuel

./: .gitignore  .gitmodules  package-lock.json
backend/: README.md  config.json  pyproject.toml  requirements.txt  run.py
backend/codeduel/: __init__.py  auth.py  duel.py  game.py  models.py  problem.py  user.py
backend/codeduel/static/: index.html
backend/codeduel/static/assets/: index-Cyxho3KT.js  index-D7MmOAb_.css
backend/example_data/: atcoder_contests.html  example_data.json  lexicographic_order.html  permutation_permutation.html  wood_cutting.html
backend/tests/: conftest.py  test_auth.py  test_duel.py  test_game.py  test_problem.py  test_user.py
frontend/: .gitignore  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.css  Auth.css  Dashboard.css  Dashboard.jsx  HistoryPage.jsx  LandingPage.css  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx  app.jsx  index.css  loginPage.jsx  main.jsx  socket.js
frontend/src/components/: Duel.jsx  Game.jsx  Game.module.css  GameInfo.css  GameInfo.jsx  GameResults.jsx  Lobby.jsx  OpponentStatus.jsx  Pre.jsx  ProblemDescription.module.css
frontend/src/components/ui/: tabs.jsx
